feat: add amplify-class! and amplify-all! for batch test amplification